zero-schema-macros/tests/ui/fail/43_optional_nested.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<Option<Missing>>,
}

fn main() {}
